--- a/index.html
+++ b/index.html
@@ -515,8 +515,9 @@
 
 <script>
 // Web App URLs - UPDATE THESE WITH YOUR NEW DEPLOYMENT URL
-const FETCH_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwFD-KVvVgNiLKRj2b3m-xxHiXEt9op516vs5mIG2h6YUve11w0H5C5b7-RrV064zO-lQ/exec';
-const SUBMIT_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwFD-KVvVgNiLKRj2b3m-xxHiXEt9op516vs5mIG2h6YUve11w0H5C5b7-RrV064zO-lQ/exec';
+const FETCH_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwBvwOsBfpV5eGiULPcuICBJzRuxU7sONMBHCpu7CSX8utBHG1hgQPqVEPt8oz7elAmJw/exec";
+const SUBMIT_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwBvwOsBfpV5eGiULPcuICBJzRuxU7sONMBHCpu7CSX8utBHG1hgQPqVEPt8oz7elAmJw/exec";
+
 
 // Global variable to store current project data
 let currentProjectData = {};
@@ -855,4 +856,5 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
